- 移除旧版前端页面 - 修复「副本数显示异常」fixed #50